<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Remote Observatory</string>
    <string name="action_connect">New connection</string>
    <string name="action_disconnect">Remove connections</string>
    <string name="action_edit">Edit connection</string>
    <string name="action_exit">Exit</string>
    <string name="action_log">Show log</string>
    <string name="action_settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="alert_connection_lost">Connection lost</string>
    <string name="alert_device_add">New device added</string>
    <string name="alert_device_remove">Device disconnect</string>
    <string name="alert_msg">Only read property. Nothing to edit.</string>
    <string name="autoconnect">Autoconnect</string>
    <string name="blob_enable">Enable BLOBs </string>
    <string name="button_connect">Add</string>
    <string name="button_update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="conn_switch">Connect</string>
    <string name="disconnect">Remove conncetions</string>
    <string name="drawe_menu_title">Connections and devices</string>
    <string name="edit_connect">Edit</string>
    <string name="help">General help</string>
    <string name="help_title">Welcome to Remote Observatory</string>
    <string name="hint_host">Server</string>
    <string name="hint_name">Name</string>
    <string name="hint_port">Port</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_edit">Edit</string>
    <string name="not_data">No data to view</string>
    <string name="not_data_save">No data to save</string>
    <string name="ok_button">Ok</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="notification_bar">System notifications</string>
    <string name="notification_dialog">Dialog notifications</string>
    <string name="notification_sound">Sound notifications</string>
    <string name="notification_vibrate">Vibrate notifications</string>
    <string name="general_settings">General Settings</string>
    <string name="folder">Default folder</string>
    <string name="version">Version 0.9</string>
    <string name="app_sub_title">A INDI client to control astronomical observatories</string>
    <string name="help_text">
        <![CDATA[
        <div>
                <p><font color="red"><i>WARNING: This app is currently in open beta phase. You are free to use it and provide any comments about it. However, we are not responsible of any possible damage to any equipment controlled with this piece of software.</i></font></p>
                <br /><br />
                <p>Press button <b>+</b> on the toolbar to <u>add a new connection</u>.</p>
                <p>in the sidebar (sliding the finger from left to right) all connections are listed.</p>
                <p>Press button <u>Connect</u> on the sidebar to start a connection.</p>
                <p>One connected, reopen sidebar to select devices.</p>
                <p><p><Strong>To report any bugs or send comments, please use: <i>jtbenavente@gmail.com</i></Strong></p></p>
        </div>
        ]]>

    </string>
    <string name="default_view">Default view</string>
    <string name="save_text">File saved</string>
    <string name="title_activity_front">Front</string>
    <string name="abort_text">Press to abort</string>
    <string name="button_abort">ABORT</string>
    <string name="remove_log">Remove Log</string>
    <string name="remove_log_text">Do you want to clear log?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="demo_server">Demo Server</string>
    <string name="demo_text">Do you want to connect to a demo server to test the application?</string>
    <string name="show_demo_dialog_text">Show at startup</string>
    <string name="action_demo">Demo</string>
    <string name="alert_demo_added">The demo server is already on your list</string>
    <string name="alert_demo">Demo added to server list</string>
    <string name="alert_demo_edit">Demo server can not be edited</string>
    <string name="alert_demo_name">Name can not be \"Demo\"</string>

</resources>