<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_connect" android:title="@string/action_connect"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_circle_black_24dp"/>

    <item android:id="@+id/action_disconnect" android:title="@string/action_disconnect"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_demo" android:title="@string/action_demo"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_log" android:title="@string/action_log"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_exit" android:title="@string/action_exit"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
