<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp">


    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/action_edit"
        android:textSize="20dp" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/info_text"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="#C8C9CB" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textUri"
        android:padding="12dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18dp"
        android:textColor="#346D7D"
        android:text="indiserver" />

    <EditText
        android:id="@+id/host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/hint_host"
        android:inputType="textUri"
        android:padding="12dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18dp"
        android:textColor="#346D7D"
        android:text="indiserver.no-ip.org" />

    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/host"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/text_border"
        android:ems="10"
        android:hint="@string/hint_port"
        android:inputType="number"
        android:padding="12dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18dp"
        android:textColor="#346D7D"
        android:text="7624" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/autoconnect"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/port"
        android:id="@+id/autconnect" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/blob_enable"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/autconnect"
        android:id="@+id/blob_recive" />


    <Button
        android:id="@+id/remove_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/remove_log"
        android:textSize="14dp"
        android:layout_below="@+id/blob_recive"
        android:layout_centerHorizontal="true"
        android:enabled="false" />


    <Button
        android:id="@+id/edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/edit_connect"
        android:textColor="@android:color/white"
        android:background="#346D7D"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_below="@+id/remove_log_button" />


</RelativeLayout>
    </ScrollView>