<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jaime.indiandroidui.Front"
    android:background="@drawable/portada">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        style="@style/TextAppearance.AppCompat.Title"
        android:textColor="#ffffffff"
        android:id="@+id/title">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:id="@+id/version"
        android:textColor="#ffffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_sub_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:layout_below="@+id/title"
        android:id="@+id/subtitle" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:max="100"
        android:indeterminate="false"
        android:progress="1"
        android:layout_below="@+id/subtitle" />


</RelativeLayout>
